--- a/front/src/pages/components/AddFormTransaction/styles.module.sass
+++ b/front/src/pages/components/AddFormTransaction/styles.module.sass
@@ -11,6 +11,9 @@
     position: relative
     z-index: 1
     padding: 40px
+    position: fixed
+    top: 0
+    left: 0
 
     section
         width: 100%
